fix: sales section text alignment

--- a/css/landing.css
+++ b/css/landing.css
@@ -348,10 +348,6 @@
       }
     }
 
-    & .item-header {
-      padding-right: 60px;
-    }
-
     & .item-header h1 {
       font-size: 40px;
       line-height: 50px;
@@ -524,12 +520,13 @@
     height: fit-content;
   }
   .sales-item{
-    text-align: center;
     display: flex;
+    text-align: center;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+
 
   /* remove sales image */
   .sales-item:first-of-type{
